tests/ui/borrowck/issue-92015.stderr
error[E0594]: cannot assign to `*foo`, which is behind an `&` reference
  --> $DIR/issue-92015.rs:6:5
   |
LL |     *foo = 1;
   |     ^^^^^^^^ `foo` is an `&` reference, so the data it refers to cannot be written
   |
help: consider specifying this binding's type
   |
LL |     let foo: &mut i32 = Some(&0).unwrap();
   |            ++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
